src/index.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
@import "@fontsource-variable/geist";

@custom-variant dark (&:is(.dark *));

:root {
	--text: #6b6375;
	--text-h: #08060d;
	--bg: #fff;
	--border: oklch(0.92 0 0);
	--code-bg: #f4f3ec;
	--accent: oklch(0.94 0 0);
	--accent-bg: rgba(170, 59, 255, 0.1);
	--accent-border: rgba(170, 59, 255, 0.5);
	--social-bg: rgba(244, 243, 236, 0.5);
	--shadow: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);

	--sans: system-ui, "Segoe UI", Roboto, sans-serif;
	--heading: system-ui, "Segoe UI", Roboto, sans-serif;
	--mono: ui-monospace, Consolas, monospace;

	font: 16px / 145% var(--sans);
	letter-spacing: 0.18px;
	color-scheme: light dark;
	color: var(--text);
	background: var(--bg);
	font-synthesis: none;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;

	--background: oklch(0.99 0 0);
	--foreground: oklch(0 0 0);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0 0 0);
	--popover: oklch(0.99 0 0);
	--popover-foreground: oklch(0 0 0);
	--primary: oklch(0 0 0);
	--primary-foreground: oklch(1 0 0);
	--secondary: oklch(0.94 0 0);
	--secondary-foreground: oklch(0 0 0);
	--muted: oklch(0.97 0 0);
	--muted-foreground: oklch(0.44 0 0);
	--accent-foreground: oklch(0 0 0);
	--destructive: oklch(0.63 0.19 23.03);
	--input: oklch(0.94 0 0);
	--ring: oklch(0 0 0);
	--chart-1: oklch(0.81 0.17 75.35);
	--chart-2: oklch(0.55 0.22 264.53);
	--chart-3: oklch(0.72 0 0);
	--chart-4: oklch(0.92 0 0);
	--chart-5: oklch(0.56 0 0);
	--radius: 0.5rem;
	--sidebar: oklch(0.99 0 0);
	--sidebar-foreground: oklch(0 0 0);
	--sidebar-primary: oklch(0 0 0);
	--sidebar-primary-foreground: oklch(1 0 0);
	--sidebar-accent: oklch(0.94 0 0);
	--sidebar-accent-foreground: oklch(0 0 0);
	--sidebar-border: oklch(0.94 0 0);
	--sidebar-ring: oklch(0 0 0);
	--destructive-foreground: oklch(1 0 0);
	--font-sans: Geist, sans-serif;
	--font-serif: Georgia, serif;
	--font-mono: Geist Mono, monospace;
	--shadow-color: hsl(0 0% 0%);
	--shadow-opacity: 0.18;
	--shadow-blur: 2px;
	--shadow-spread: 0px;
	--shadow-offset-x: 0px;
	--shadow-offset-y: 1px;
	--letter-spacing: 0em;
	--spacing: 0.25rem;
	--shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
	--shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
	--shadow-sm: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
	--shadow-md: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
	--shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
	--shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
	--shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
	--tracking-normal: 0em;
}

body {
	margin: 0;
}

.dark {
	--text: #9ca3af;
	--text-h: #f3f4f6;
	--bg: #16171d;
	--border: oklch(0.26 0 0);
	--code-bg: #1f2028;
	--social-bg: rgba(47, 48, 58, 0.5);
	--shadow: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
	--background: oklch(0 0 0);
	--foreground: oklch(1 0 0);
	--card: oklch(0.14 0 0);
	--card-foreground: oklch(1 0 0);
	--popover: oklch(0.18 0 0);
	--popover-foreground: oklch(1 0 0);
	--primary: oklch(1 0 0);
	--primary-foreground: oklch(0 0 0);
	--secondary: oklch(0.25 0 0);
	--secondary-foreground: oklch(1 0 0);
	--muted: oklch(0.23 0 0);
	--muted-foreground: oklch(0.72 0 0);
	--accent: oklch(0.32 0 0);
	--accent-foreground: oklch(1 0 0);
	--destructive: oklch(0.69 0.2 23.91);
	--input: oklch(0.32 0 0);
	--ring: oklch(0.72 0 0);
	--chart-1: oklch(0.81 0.17 75.35);
	--chart-2: oklch(0.58 0.21 260.84);
	--chart-3: oklch(0.56 0 0);
	--chart-4: oklch(0.44 0 0);
	--chart-5: oklch(0.92 0 0);
	--sidebar: oklch(0.18 0 0);
	--sidebar-foreground: oklch(1 0 0);
	--sidebar-primary: oklch(1 0 0);
	--sidebar-primary-foreground: oklch(0 0 0);
	--sidebar-accent: oklch(0.32 0 0);
	--sidebar-accent-foreground: oklch(1 0 0);
	--sidebar-border: oklch(0.32 0 0);
	--sidebar-ring: oklch(0.72 0 0);
	--destructive-foreground: oklch(0 0 0);
	--radius: 0.5rem;
	--font-sans: Geist, sans-serif;
	--font-serif: Georgia, serif;
	--font-mono: Geist Mono, monospace;
	--shadow-color: hsl(0 0% 0%);
	--shadow-opacity: 0.18;
	--shadow-blur: 2px;
	--shadow-spread: 0px;
	--shadow-offset-x: 0px;
	--shadow-offset-y: 1px;
	--letter-spacing: 0em;
	--spacing: 0.25rem;
	--shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
	--shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.09);
	--shadow-sm: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 1px 2px -1px hsl(0 0% 0% / 0.18);
	--shadow-md: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 2px 4px -1px hsl(0 0% 0% / 0.18);
	--shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
	--shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
	--shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
}

@theme inline {
	--font-sans: Geist, sans-serif;
	--color-sidebar-ring: var(--sidebar-ring);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar: var(--sidebar);
	--color-chart-5: var(--chart-5);
	--color-chart-4: var(--chart-4);
	--color-chart-3: var(--chart-3);
	--color-chart-2: var(--chart-2);
	--color-chart-1: var(--chart-1);
	--color-ring: var(--ring);
	--color-input: var(--input);
	--color-border: var(--border);
	--color-destructive: var(--destructive);
	--color-accent-foreground: var(--accent-foreground);
	--color-accent: var(--accent);
	--color-muted-foreground: var(--muted-foreground);
	--color-muted: var(--muted);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-secondary: var(--secondary);
	--color-primary-foreground: var(--primary-foreground);
	--color-primary: var(--primary);
	--color-popover-foreground: var(--popover-foreground);
	--color-popover: var(--popover);
	--color-card-foreground: var(--card-foreground);
	--color-card: var(--card);
	--color-foreground: var(--foreground);
	--color-background: var(--background);
	--radius-sm: calc(var(--radius) * 0.6);
	--radius-md: calc(var(--radius) * 0.8);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) * 1.4);
	--radius-2xl: calc(var(--radius) * 1.8);
	--radius-3xl: calc(var(--radius) * 2.2);
	--radius-4xl: calc(var(--radius) * 2.6);
	--font-mono: Geist Mono, monospace;
	--font-serif: Georgia, serif;
	--radius: 0.5rem;
	--tracking-tighter: calc(var(--tracking-normal) - 0.05em);
	--tracking-tight: calc(var(--tracking-normal) - 0.025em);
	--tracking-wide: calc(var(--tracking-normal) + 0.025em);
	--tracking-wider: calc(var(--tracking-normal) + 0.05em);
	--tracking-widest: calc(var(--tracking-normal) + 0.1em);
	--tracking-normal: var(--tracking-normal);
	--shadow-2xl: var(--shadow-2xl);
	--shadow-xl: var(--shadow-xl);
	--shadow-lg: var(--shadow-lg);
	--shadow-md: var(--shadow-md);
	--shadow: var(--shadow);
	--shadow-sm: var(--shadow-sm);
	--shadow-xs: var(--shadow-xs);
	--shadow-2xs: var(--shadow-2xs);
	--spacing: var(--spacing);
	--letter-spacing: var(--letter-spacing);
	--shadow-offset-y: var(--shadow-offset-y);
	--shadow-offset-x: var(--shadow-offset-x);
	--shadow-spread: var(--shadow-spread);
	--shadow-blur: var(--shadow-blur);
	--shadow-opacity: var(--shadow-opacity);
	--color-shadow-color: var(--shadow-color);
	--color-destructive-foreground: var(--destructive-foreground);
}

@layer base {
	* {
		@apply border-border outline-ring/50;
	}
	body {
		@apply bg-background text-foreground;
		letter-spacing: var(--tracking-normal);
	}
	html {
		@apply font-sans;
	}
	button,
	[role="button"] {
		cursor: pointer;
	}
}

